war/src/main/webapp/engines/jahia-anthracite/_edit_engine.scss
/* ... */
.engine-window {
	z-index: 999999 !important;
}

// Input Error icon

img.invalid-icon {
	background: _theme-color(status, error) !important;
	height: 29px !important;
	width: 4px !important;
	border-radius: 2px;
	left: -10px !important;
	top: 0 !important;
}


// Input Error Tooltip

.x-form-invalid-tip {
    background: _theme-color(status, error);
    border-radius: 2px !important;
    box-shadow: 0 2px 5px 0 rgba($color-black, .26);

		.x-tip-tl,
		.x-tip-tl .x-tip-tr,
		.x-tip-tl .x-tip-tr .x-tip-tc,
		.x-tip-bwrap .x-tip-ml,
		.x-tip-bwrap .x-tip-ml .x-tip-mr,
		.x-tip-bl.x-tip-nofooter,
		.x-tip-bl.x-tip-nofooter .x-tip-br,
		.x-tip-bl.x-tip-nofooter .x-tip-br .x-tip-bc {
		    background: transparent !important;
		}

		.x-tip-bwrap .x-tip-ml .x-tip-mr .x-tip-body {
		    color: $color-white;
		    font-family: $FONT--FAMILY---NUNITO;
		    font-weight: $FONT--WEIGHT---NORMAL;
				background: url(./images/icons/ic_info_outline@2x.png) no-repeat left center !important;
		    background-size: 20px !important;
		}

}


// Color picker

.color-picker-field {

	.x-btn.x-btn-noicon em.x-btn-arrow {
    background: transparent !important;
	}

	.x-btn.x-btn-noicon button.x-btn-text {
		background: url(./images/icons_dark/color.svg) no-repeat center center !important;
		background-size: 18px !important;
		margin-top: -2px;
		opacity: .67;
	}

}



// Work in progress Panel
.wip-window {
	z-index: 99999999!important;

	table {
		border-collapse: collapse;
		width: 100%;
	}

	label {
		text-transform: none;
		font-size: 14px;
		font-weight: 100;
		color: #5c6164 !important;
		padding-left: 6px !important;
	}

	.help-message {
		padding: 5px 10px;
		background: orange;
		font-size: 14px;
		color: white;
		font-weight: 100;
		margin-top: 20px;

		a {
			color: white;
		}
	}

	.error-languages {
		background: rgba(255, 0, 0, 0.11);
		display: block;
		position: relative;
		margin-left: -15px;
		z-index: 999999999999;
		padding: 5px 15px !important;

		.error-message {
			color: red;
			font-size: 14px;
			font-weight: 400;
			margin-top: 13px;
			margin-bottom: 6px;
		}

		// Error Icon
		img.gwt-Image {
			display: none!important;
		}
	}

	.x-item-disabled {
		opacity: 0.7;
	}


	.x-window-bwrap {
		overflow: hidden;
	}

	// Header
	> .x-window-tl {
		padding-bottom: 0!important;

		.x-window-header {
			 .x-window-header-text {
				 display: block;
			 }
		}
	}

	.x-window-body {
		height: auto!important;
		overflow: visible;

		> div {
			> table { // Ask for class
				> tbody {
					> tr {

						> td {
							margin-left: 10px;
							margin-bottom: 5px;
							display: block;
						}

						&:nth-child(1) { // Ask for a class
							> td {
								margin-bottom: 30px;
								margin-left: 0;

								div {
									color: #5c6164;
									font-size: 16px;
									font-weight: 300;
								}
							}
						}

						&:nth-child(3) > td > div > table > tbody > tr:nth-child(2) > td { // Ask for a class
							padding-left: 18px;
							padding-top: 5px;
						}

						&:nth-child(3) > td > div { // Ask for a class
							padding: 5px 0;
						}
					}
				}
			}
		}

		.x-form-check-wrap {
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
			max-width: 392px !important;
			padding-left: 1px;
		}
	}

	.x-window-bl {
		margin-top: 20px;

		.x-panel-fbar {
			.x-toolbar-cell {
				// Stop the buttons being inversed
				float: none
			}
		}
	}

	// Error message labels
	.error-message {
		color: red;
	}


}

// Hidde disabled buttons if content is locked
body[data-indigo-edit-engine-locked="true"] .JahiaEditEngineButtonBar button[aria-disabled="true"] {
    opacity: .5;
}

.JahiaEditEngineButtonBar {
	label {
		@include text(14px, #F5F5F5 !important, $FONT--WEIGHT---LIGHT);
	}
}

